--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,7 @@
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
                         "outputPath": "dist/sakai-ng",
-                        "index": "index.html",
+                        "index": "src/index.html",
                         "main": "src/main.ts",
                         "polyfills": [
                             "zone.js"
